fix: change some css to fix scrolling issues on mobile

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -129,8 +129,19 @@
   }
 }
 
-.safe-height {
+.safe-min-height {
   min-height: calc(
+    100dvh - env(safe-area-inset-top) - env(safe-area-inset-bottom)
+  );
+}
+.safe-height {
+  height: calc(
+    100dvh - env(safe-area-inset-top) - env(safe-area-inset-bottom)
+  );
+}
+
+.safe-max-height {
+  max-height: calc(
     100dvh - env(safe-area-inset-top) - env(safe-area-inset-bottom)
   );
 }
